--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(ranked_belief_tests
     rank_test.cpp
     promise_test.cpp
     ranking_element_test.cpp
+    ranking_iterator_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
