Implement construction functions for RankingFunction (Phase 3.1)
Add comprehensive set of construction functions to create RankingFunction
instances from various sources:

- from_list: Create from vector of value-rank pairs
- from_values_uniform: All values at same rank
- from_values_sequential: Sequential rank assignment
- from_values_with_ranker: Custom rank function with C++20 concepts
- from_generator: Infinite sequences from generator function
- from_range: C++20 range conversion with std::ranges::input_range
- from_pair_range: Range of pairs (handles std::map const keys)
- singleton/empty: Convenience aliases

Key features:
- C++20 concepts for type safety (std::invocable, std::same_as, etc.)
- Proper handling of std::map's const key type in from_pair_range
- Sequential rank computation fixed to assign ranks in correct order
- 41 new tests covering all construction variants and edge cases
- All 271 tests passing (100% pass rate maintained)

Test coverage includes:
- Empty/single/multiple element construction
- Type deduction with various value types
- Deduplication behavior consistency
- C++20 ranges integration (filter, transform, iota)
- Large sequences (100 elements)
- Complex types (vector<int>)
- Infinite rank values

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(ranked_belief_tests
     ranking_element_test.cpp
     ranking_iterator_test.cpp
     ranking_function_test.cpp
+    constructors_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
