Phase 3.3: Implement lazy filter operations
- Implemented filter(), take(), and take_while_rank() operations
- All operations maintain full lazy evaluation semantics
- Ranks preserved through filtering operations
- 43 comprehensive tests covering:
  * Basic filtering (empty, single, multiple elements)
  * Rank preservation (sequential, uniform, non-sequential)
  * Lazy evaluation with infinite sequences
  * Complex predicates and type transformations
  * Deduplication behavior
  * Operation chaining (filter+map+take)
  * Exception handling
  * Large sequence performance

Matches Racket semantics:
- filter: Racket's filter-ranking (lazy value filtering)
- take: Racket's filter-after (take first n elements)
- take_while_rank: Racket's up-to-rank (filter by rank threshold)

All 343 tests passing (300 previous + 43 new).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(ranked_belief_tests
     ranking_function_test.cpp
     constructors_test.cpp
     operations/map_test.cpp
+    operations/filter_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
