Complete Phase 3.4: Merge operations
Implements merge() and merge_all() for combining ranking functions:

New operations:
- merge<T>(rf1, rf2, deduplicate): Binary merge with rank ordering
- merge_all<T>(rankings, deduplicate): N-way merge via iterative merges

Implementation details:
- Uses seen_rank parameter to track consumption state (matches Racket semantics)
- Fully lazy evaluation with shared_ptr<function> for recursive merging
- Deduplication enabled by default (deduplicate=true)
- Elements interleaved by ascending rank order
- When both sequences have same rank, first takes precedence

Test coverage (30 tests):
- Binary merge edge cases (empty, single, interleaving)
- N-way merge with multiple sequences
- Lazy evaluation verification
- Deduplication behavior (with/without)
- Type tests (strings, integers)
- Chaining with filter/map operations
- Performance tests (5K elements)

Verified against Racket implementation:
- merge(rf1, rf2) with deduplicate=true produces {1,2,3} for identical sequences
- merge(rf1, rf2) with deduplicate=false produces {1,1,2,2,3,3}
- Matches rp-core.rkt merge semantics exactly

All 373 tests passing (130 operations tests total).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(ranked_belief_tests
     constructors_test.cpp
     operations/map_test.cpp
     operations/filter_test.cpp
+    operations/merge_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
