--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(ranked_belief_tests
     operations/filter_test.cpp
     operations/merge_test.cpp
     operations/merge_apply_test.cpp
+    operations/observe_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
