--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(ranked_belief_tests
     operations/merge_test.cpp
     operations/merge_apply_test.cpp
     operations/observe_test.cpp
+    operations/nrm_exc_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
