Phase 4.2: add operator overloads

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(ranked_belief_tests
     operations/observe_test.cpp
     operations/nrm_exc_test.cpp
     autocast_test.cpp
+    operators_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
