Add type-erased ranking wrapper and tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(ranked_belief_tests
     autocast_test.cpp
     operators_test.cpp
     integration_test.cpp
+    type_erasure_test.cpp
 )
 
 target_link_libraries(ranked_belief_tests
