--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ coverage/
 
 # Reference materials (not part of build)
 ranked-programming/
+build-test/examples/boolean_circuit_example
+build-test/examples/boolean_circuit_example
+build-test/examples/boolean_circuit_example
