Expose map/filter in R bindings and register callbacks

--- a/bindings/rankedBeliefR/NAMESPACE
+++ b/bindings/rankedBeliefR/NAMESPACE
@@ -7,4 +7,6 @@ export(rb_is_empty)
 export(rb_merge_int)
 export(rb_observe_value_int)
 export(rb_free)
+export(rb_map_int)
+export(rb_filter_int)
 S3method(print, ranked_belief_ranking)
