Add rb_merge_apply_int for monadic bind (flatMap) support
This addresses the fundamental limitation that prevented scalable composition
of ranked computations. Previously, nested rb_map_int calls created nested
rankings that couldn't be properly sampled, forcing manual enumeration of
combination spaces.

C API changes:
- Add rb_merge_apply_callback_t typedef
- Add rb_merge_apply_int() function implementing monadic bind
- Include operations/merge_apply.hpp

R binding changes:
- Add rb_merge_apply_int() wrapper function
- Add r_merge_apply_trampoline for callback handling
- Update NAMESPACE to export rb_merge_apply_int
- Add comprehensive tests (10 test cases)

Example updates:
- ranked_procedure_call.R: Use rb_merge_apply_int instead of manual enumeration
- ranked_let.R: Use rb_merge_apply_int for dependent variables
- ranking_network.R: Use rb_merge_apply_int for network propagation

This enables the same compositional patterns as Python's merge_apply,
making the R bindings fully capable of expressing complex ranked
computations without manual combination enumeration.

All tests pass (27 total, including 10 new merge_apply tests).

--- a/bindings/rankedBeliefR/NAMESPACE
+++ b/bindings/rankedBeliefR/NAMESPACE
@@ -9,4 +9,5 @@ export(rb_observe_value_int)
 export(rb_free)
 export(rb_map_int)
 export(rb_filter_int)
+export(rb_merge_apply_int)
 S3method(print, ranked_belief_ranking)
