--- a/bindings/rankedBeliefR/DESCRIPTION
+++ b/bindings/rankedBeliefR/DESCRIPTION
@@ -12,4 +12,8 @@ Encoding: UTF-8
 SystemRequirements: C++20, CMake-built ranked_belief_c_api in ../../build
 Depends: R (>= 4.1.0)
 NeedsCompilation: yes
-Suggests: testthat (>= 3.0.0)
+Suggests: 
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
