--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ ranked-programming/
 build-test/examples/boolean_circuit_example
 build-test/examples/boolean_circuit_example
 build-test/examples/boolean_circuit_example
+bindings/rankedBeliefR/rankedBeliefR_0.0.1.tar.gz
