fix: create build directory before running Doxygen in CI
Fix GitHub Actions workflow error where Doxygen failed because the
build/docs output directory didn't exist.

Added 'mkdir -p build/docs' step before running Doxygen to ensure
the output directory exists.

Also add comprehensive troubleshooting guide for common GitHub Pages
deployment issues.

Fixes: error: tag OUTPUT_DIRECTORY: Output directory 'build/docs'
does not exist and cannot be created

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -32,6 +32,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y doxygen graphviz
       
+      - name: Create output directory
+        run: |
+          mkdir -p build/docs
+      
       - name: Generate Doxygen documentation
         run: |
           doxygen Doxyfile
